--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "gh-pages": "^6.1.1",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
